<resources>
    <string name="app_name" translatable="false">Just Buy</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings" translatable="false">Settings</string>
    <string name="introduceBusqueda">Enter a ZIP Code</string>
    <string name="search_icon">Search Shops</string>
    <string name="user_icon">User Control Panel</string>
    <string name="order_icon">Order</string>
    <string name="title_activity_login">User Login</string>
    <string name="nick_label">User</string>
    <string name="password_label">Password</string>
    <string name="inicioSesion">Log In</string>
    <string name="policiesJB">By clicking Create account whit email, you accept Just Buy\'s Terms and Conditions, Privacy Policy and Cookies Policy.</string>
    <string name="register_label">Don\'t have an account?</string>
    <string name="register">Sing Up</string>
    <string name="registerAction">Register</string>
    <string name="inicioSesion_label">You already have an account?</string>
    <string name="noRegister_label">Guest</string>
    <string name="accountDetails">Account Details</string>
    <string name="general">General</string>
    <string name="userInfoImage">userInfoImage</string>
    <string name="name">Name</string>
    <string name="email">E-Mail</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="saveChanges">Save Changes</string>
    <string name="sendSales">Send me Sales about my favorite Shops.</string>
    <string name="addressLine1">Address Line 1</string>
    <string name="addressLine2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zipCode">ZIP Code</string>
    <string name="chooseAddressName">Choose a Name for this Address</string>
    <string name="address">Address</string>
    <string name="addAddress">Add an Address</string>

    <string-array name="userControlPanel">
        <item>Account Info</item>
        <item>Addresses</item>
        <item>Payment Methods</item>
    </string-array>

    <string-array name="userControlPanel2">
        <item>Terms and Conditions</item>
    </string-array>

    <string name="result">Shop/s</string>
    <string name="noFilters">No Filters</string>
    <string name="order">Orders</string>
    <string name="aZ">A-Z</string>
    <string name="rating">Rating</string>
    <string name="title_activity_shop_selected" translatable="false">shopSelected</string>
    <string name="title_home">Information</string>
    <string name="title_dashboard">Products</string>
    <string name="title_notifications">Ratings</string>
    <string name="logoShop" translatable="false">logoShop</string>
    <string name="ShopName">ShopName</string>
    <string name="ShopCategory">ShopCategory</string>
    <string name="NumRatings">NumRatings</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="descriptionShop">descriptionShop</string>
    <string name="averageRating">averageRating</string>
    <string name="basedInCommentaries">Based in x Commentaries</string>
    <string name="userNameLabel">Guest</string>
    <string name="errorUserLogIn">Nick or Password not valid</string>
    <string name="okUserLogIn">Login Successful</string>
    <string name="changesSaved">Changes Saved</string>
    <string name="deleteAddress">Delete Address</string>
    <string name="editAddress">Edit Address</string>
    <string name="successNewUser">User Registered</string>
    <string name="shopResultZIP">Shops on</string>
    <string name="errorSearchZIP">No ZIP Code Introduced</string>
    <string name="title_activity_search_shop_result">searchShopResult</string>
</resources>
