<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageSearchShopLogo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/logoShop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/no_logo" />

    <TextView
        android:id="@+id/labelSearchShopName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/ShopName"
        android:textColor="@android:color/black"
        android:textSize="@dimen/activity_horizontal_margin"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageSearchShopLogo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelSearchShopCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/ShopCategory"
        app:layout_constraintStart_toEndOf="@+id/imageSearchShopLogo"
        app:layout_constraintTop_toBottomOf="@+id/labelSearchShopName" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/ratingSearchShopInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@+id/imageSearchShopLogo"
        app:layout_constraintTop_toBottomOf="@+id/labelSearchShopCategory">

        <RatingBar
            android:id="@+id/ratingBarSearchShop2"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="6"
            android:rating="5"
            app:layout_constraintEnd_toStartOf="@+id/labelSearchShopNumRatings"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/labelSearchShopNumRatings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/NumRatings"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/ratingBarSearchShop2"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>