<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageProductLogo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/logoShop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/no_logo" />

    <TextView
        android:id="@+id/labelProductName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:text="@string/ShopName"
        android:textColor="@android:color/black"
        android:textSize="@dimen/activity_horizontal_margin"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageProductLogo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelProdcutCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:text="@string/ShopCategory"
        app:layout_constraintStart_toEndOf="@+id/imageProductLogo"
        app:layout_constraintTop_toBottomOf="@+id/labelProductName" />

    <TextView
        android:id="@+id/labelPriceProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="9dp"
        android:text="@string/ShopCategory"
        app:layout_constraintStart_toEndOf="@+id/imageProductLogo"
        app:layout_constraintTop_toBottomOf="@+id/labelProdcutCategory" />
</android.support.constraint.ConstraintLayout>